--- a/ec2creation.yml
+++ b/ec2creation.yml
@@ -2,12 +2,12 @@
   remote_user: ansadmin
   become: yes
   tasks:
-    - name: create ec2 instance
+    - name: going to create ec2 instance
       ec2:
          key_name: LM
          region: "ap-south-1"
          instance_type: t2.micro
-         image: ami-04b1ddd35fd71475a
+         image: ami-052c08d70def0ac62
          count: 1
          vpc_subnet_id: subnet-53b6bf3b
          assign_public_ip: yes
